# ivn

./: IVN_Normalize_Dataset.py  IVN_SOPandInstructions.docx  Ivn_citation_validator.py  README.md  To-Be-Crosswalked.xlsx  cleanup_for_power_apps.py  cleanup_for_power_apps_chat.txt  cleanup_for_power_apps_prompt.txt  component_mapper.py  copy_of_ivn.ipynb  index[1].htm  ivn.ipynb  ivn_component_alignment_management_system.py  ivn_component_alignment_management_system_prompt.txt  ivn_components_error_checker.py  ivn_components_error_checker_prompt.txt  ivn_executive_reporter.py  ivn_extract_components_from_pdf.py  ivn_extract_components_from_pdf_prompt.txt  ivn_fuzzy_match.py  ivn_governance_alignment_engine.py  ivn_governance_alignment_engine_prompt.txt  ivn_intelligent_component_crosswalk.code-workspace  ivn_intelligent_component_crosswalk.py  ivn_intelligent_component_crosswalk_chat.txt  ivn_intelligent_component_crosswalk_prompt.txt  ivn_keyword_extractor.py  ivn_keyword_extractor_chat.txt  ivn_keyword_extractor_prompt.txt  ivn_network_viewer.pbip  ivn_network_viewer.pbit  ivn_network_viewer.txt  ivn_transformation_engine.py  ivn_transformation_engine_prompt.txt  ivntest_keywords.csv  omb_memo_scraper.py  pdf_component_extractor.py  populate_component_urls.py  populate_component_urls_prompt.txt  similarity_scores.py  (+3 more)
ivn-genealogy/ivn-genealogy/: README.md  docker-compose.yml  ivn_genealogy_internal_state.txt  ivn_genealogy_prompt.txt  ivn_genealogy_reasoning.txt  pyproject.toml
ivn-genealogy/ivn-genealogy/data/: directive_categories.csv  m2610_alignment.csv  (+2 more)
(+384 files in other folders)
