[tool.poetry]
name = "ivn-genealogy"
version = "0.1.0"
description = "A legal genealogy graph of American governance."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
typer = "^0.4.1"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
networkx = "^2.8.4"
pyvis = "^0.3.0"
pandas = "^1.4.2"
numpy = "^1.22.4"
neo4j = "^5.0.0"
kuzu = "^0.11.3"
streamlit = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
